// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<Fragment>
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Home
    </button>
  </div>
  <h1>
    Position
  </h1>
  <div>
    <withProps(PositionDetails)
      position={
        Object {
          "amount": 1,
          "closeCommission": null,
          "closeDate": null,
          "closePrice": null,
          "id": "id",
          "openCommission": 1,
          "openDate": "2019-07-01",
          "openPrice": 100,
          "symbol": "AAPL",
        }
      }
    />
  </div>
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>
</Fragment>
`;

exports[`matches snapshot when loading 1`] = `
<Fragment>
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Home
    </button>
  </div>
  <h1>
    Position
  </h1>
  <div>
    <Progress />
  </div>
  <div>
    <button
      onClick={[Function]}
      type="button"
    >
      Delete
    </button>
  </div>
</Fragment>
`;
